<resources>
    <string name="app_name">Who\'s Lying</string>
    <string name="players">Players</string>
    <string name="rolelists">Rolelists</string>
    <string name="play">Play</string>
    <string name="new_game">New Game</string>
    <string name="roles">Roles</string>
    <string name="who_s_lying">Who\'s Lying?</string>
    <string name="add_players">Add players</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="add_name">Add name</string>
    <string name="def">Default</string>
    <string name="submit">submit</string>
    <string name="add_a_player">Add a player</string>
    <string name="classicmafia">Classic Mafia</string>
    <string name="innocent">Innocent</string>
    <string name="mafioso">Mafioso</string>
    <string name="title_activity_game">Game</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_role">Check role</string>
    <string name="player_name_here">Player Name Here</string>
    <string name="placeholder">placeholder</string>
</resources>